<resources>
    <string name="app_name">德明自控</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_contrl_speed">德明自控</string>
	<string name="login">登  录</string>
	<string name="search_condition">查询条件</string>
	<string name="task_single_number">任务单号</string>
	<string name="start_date">开始日期</string>
	<string name="end_date">结束日期</string>
	<string name="search">查询</string>
	<string name="reset">重置</string>
	<string name="no_authorization">未授权</string>
	<string name="authorization">授权</string>
	<string name="delete_database">删除数据库</string>
	<string name="backup_database">备份数据库</string>
	<string name="user_list">用户列表</string>
	<string name="remind">提醒</string>
	<string name="restart">重启</string>
	<string name="shutdown">关机</string>
</resources>