<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_condition"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_search_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linear_task_single_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >

            <TextView
                style="@style/search_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_single_number" />

            <EditText android:id="@+id/et_task_single_number"
                android:inputType="numberSigned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_single_number" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linear_end_data"
            android:layout_alignRight="@+id/linear_end_data"
            android:layout_below="@id/linear_end_data"
            android:text="@string/search" />

        <LinearLayout
            android:id="@+id/linear_start_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linear_task_single_number"
            android:layout_below="@+id/linear_task_single_number"
            android:gravity="center_horizontal" >

            <TextView
                style="@style/search_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date" />

            <TextView android:id="@+id/tv_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/search_text_style"
                android:gravity="right"
                android:hint="@string/start_date" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_end_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linear_start_data"
            android:layout_below="@+id/linear_start_data"
            android:gravity="center_horizontal" >

            <TextView
                style="@style/search_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date" />

            <TextView android:id="@+id/tv_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/search_text_style"
                android:gravity="right"
                android:hint="@string/end_date" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_search"
            android:layout_alignRight="@+id/btn_search"
            android:layout_below="@+id/btn_search"
            android:text="@string/reset" />
    </RelativeLayout>

</LinearLayout>